# engram-nodejs

./: .env.example  .gitignore  .npmignore  BENCHMARK.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  test-simple.js  tsconfig.json  tsconfig.test.json  vitest.config.ts
.github/workflows/: benchmark-regression.yml  benchmark-version-bump.yml  benchmarks.yml  build.yml
benchmarks/: run-benchmarks.mjs
crates/engram-ffi/: Cargo.toml
crates/engram-ffi/include/: engram_ffi.h
crates/engram-ffi/src/: lib.rs
crates/engram-napi/: Cargo.toml
crates/engram-napi/.cargo/: config.toml
crates/engram-napi/src/: lib.rs
docs/: API.md  GETTING_STARTED.md  QUICK_REFERENCE.md  VERIFICATION_CHECKLIST.md
examples/: basic-usage.ts
lib/: index.d.ts  index.js
scripts/: build-local.mjs
src/: index.ts  native.d.ts
tests/: helpers.ts  integration.test.ts
