[workspace]
members = ["crates/engram-napi", "crates/engram-ffi"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Engram System Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/engram-nodejs"

[workspace.dependencies]
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
napi = { version = "2", features = ["async", "napi8", "tokio_rt"] }
napi-derive = "2"
libc = "0.2"
