[package]
name = "engram-ffi"
version.workspace = true
edition.workspace = true
description = "C FFI bindings for Engram archive access"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
engram-core = { path = "../../../engram-core/crates/engram-core" }
engram-vfs = { path = "../../../engram-core/crates/engram-vfs" }
libc.workspace = true
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
