[package]
name = "engram-ffi"
version.workspace = true
edition.workspace = true
description = "C FFI bindings for Engram archive access"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
engram-rs = { git = "https://github.com/Manifest-Humanity/engram-core", branch = "engram-rs-migration" }
libc.workspace = true
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
