[package]
name = "engram-napi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.napi]
name = "engram-nodejs"

[dependencies]
engram-rs = { git = "https://github.com/Manifest-Humanity/engram-core", branch = "engram-rs-migration" }
napi.workspace = true
napi-derive.workspace = true
tokio.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build = "2"
